# git-update-all

./: .gitignore  README.md  TODO.md  darcs-pull-all.cabal  darcs-pull-all.hs  git-update-all.cabal  git-update-all.hs  git-update-all.service  git-update-all.timer
