name:                darcs-pull-all
version:             1.1
cabal-version:       >= 1.8
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2014-2015 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           experimental
homepage:            http://hub.darcs.net/dino/darcs-pull-all
synopsis:            Perform a darcs pull in every subdir
description:         A script to pull all repos in a dir with a remote if they have one. Intended to synchronize one server's repos with another.
category:            Application, Console, Scripting
tested-with:         GHC >= 7.10.1

source-repository    head
   type:             darcs
   location:         http://hub.darcs.net/dino/darcs-pull-all

-- Hey! darcs-pull-all.hs is a *script*, you don't have to build it unless
-- you want to have a binary!
executable           darcs-pull-all
   main-is:          darcs-pull-all.hs
   build-depends:      base >= 3 && < 5
                     , directory
                     , filepath
                     , process
                     , time >= 1.5
